<resources>
    <string name="app_name">CovidTracker</string>
    <string name="Dashboard">Dashboard</string>
    <string name="Awareness">Awareness</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="uodo">uodo</string>
    <string name="Search">Search</string>
    <string name="awareness">Awareness</string>
    <string name="dashboard">Dashboard</string>
    <string name="uod">uod</string>
    <string name="t0">T0</string>
    <string name="india">India</string>
    <string name="INDIA">INDIA</string>
    <string name="t">T</string>
    <string name="total_cases">Total Cases</string>
    <string name="_000000">000000</string>
    <string name="total_death">Total Death</string>
    <string name="total_recovered">Total Recovered</string>
    <string name="covidtracker">CovidTracker</string>
    <string name="state_update">State Update</string>
    <string name="confirmed">Confirmed</string>
    <string name="_50">(+50)</string>
    <string name="_10000">10000</string>
    <string name="active">Active</string>
    <string name="_3000">3000</string>
    <string name="recovered">Recovered</string>
    <string name="Recovered">Recovered</string>
    <string name="death">Death</string>
    <string name="_90">(+90)</string>
    <string name="_5000">5000</string>
    <string name="_500">500</string>
    <string name="_20">20</string>
    <string name="Death">Death</string>
    <string name="__20">(+20)</string>
    <string name="help">help</string>
    <string name="LOG">TODO</string>
    <string name="state_name">State_name</string>
    <string name="log">log</string>
    <string name="StateName">State Name</string>
    <string name="statenumber">Statenumber</string>
    <string name="_0000000">0000000</string>
    <string name="world">World</string>
    <string name="o">o</string>
    <string name="global_update">Global Update</string>
    <string name="what_is_covid19">What is COVID19</string>
    <string name="what_is_covid_19">What is COVID19?</string>
    <string name="on_11_march_2020_who_declared_novel_coronavirus_disease_covid_19_outbreak_as_a_pandemic_and_reiterated_the_call_for_countries_to_take_immediate_actions_and_scale_up_response_to_treat_detect_and_reduce_transmission_to_save_people_s_lives">On 11 March 2020, WHO declared Novel Coronavirus Disease (COVID-19) outbreak as a pandemic and reiterated the call for countries to take immediate actions and scale up response to treat, detect and reduce transmission to save people’s lives.</string>
    <string name="the_virus_that_causes_covid_19_is_mainly_transmitted_through_droplets_generated_when_an_infected_person_coughs_sneezes_or_exhales_these_droplets_are_too_heavy_to_hang_in_the_air_and_quickly_fall_on_floors_or_surfaces">The virus that causes COVID-19 is mainly transmitted through droplets generated when an infected person coughs, sneezes, or exhales. These droplets are too heavy to hang in the air, and quickly fall on floors or surfaces.</string>
    <string name="totalcase">Totalcase</string>
    <string name="_00000">00000</string>
    <string name="symptoms">Symptoms</string>
    <string name="most_common_symptoms">Most common symptoms:</string>
    <string name="fever">fever</string>
    <string name="__fever"><![CDATA[->Fever]]></string>
    <string name="dry_cough"><![CDATA[->Dry cough]]></string>
    <string name="tiredness"><![CDATA[->tiredness]]></string>
    <string name="Tiredness"><![CDATA[->Tiredness]]></string>
    <string name="less_common_symptoms">Less common symptoms:</string>
    <string name="aches_and_pains"><![CDATA[->aches and pains]]></string>
    <string name="sore_throat"><![CDATA[->sore throat]]></string>
    <string name="headache"><![CDATA[->headache]]></string>
    <string name="Headache"><![CDATA[->Headache]]></string>
    <string name="a_rash_on_skin_or_discolouration_of_fingers_or_toes"><![CDATA[->A rash on skin, or discolouration of fingers or toes]]></string>
    <string name="while_the_whole_country_is_fighting_against_the_covid_19_crisis_the_ones_on_the_frontline_doctors_and_healthcare_workers_are_working_excruciatingly_hard_for_the_welfare_of_the_patients_and_to_minimise_the_damage_to_the_society_due_to_the_pandemic_the_lack_of_a_definite_cure_for_the_infection_makes_their_work_extra_tough_and_there_is_also_the_added_pressure_of_calming_the_nerves_of_the_patients_and_their_families_for_this_the_doctors_not_only_have_to_attend_to_patients_in_person_but_also_have_to_stay_connected_to_them_over_the_phone_and_through_video_conferencing_the_threat_of_them_catching_the_disease_and_infecting_their_own_families_also_looms_large_over_them_due_to_which_most_of_the_doctors_have_given_up_going_homes_and_have_shifted_to_solitary_accommodations_where_they_go_to_take_rest_after_completing_their_duty_hours_which_could_stretch_to_15_or_even_18_hours_in_a_day">While the whole country is fighting against the COVID-19 crisis, the ones on the frontline, doctors and healthcare workers, are working excruciatingly hard for the welfare of the patients and to minimise the damage to the society due to the pandemic. The lack of a definite cure for the infection makes their work extra tough and there is also the added pressure of calming the nerves of the patients and their families. For this, the doctors not only have to attend to patients in person but also have to stay connected to them over the phone and through video conferencing. The threat of them catching the disease and infecting their own families also looms large over them, due to which most of the doctors have given up going homes and have shifted to solitary accommodations, where they go to take rest after completing their duty hours, which could stretch to 15 or even 18 hours in a day.</string>
    <string name="statename">statename</string>
    <string name="diarrhoea_conjunctivitis_headache">diarrhoea , conjunctivitis , headache</string>
    <string name="diarrhoea_conjunctivitis"><![CDATA[->diarrhoea, conjunctivitis]]></string>
</resources>