<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Home_Fragment">




        <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="420dp"
        app:cardCornerRadius="22dp"
        app:cardUseCompatPadding="true"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#06B3F8"
        android:id="@+id/state_card_view">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/t1"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:paddingStart="160dp"
                android:layout_marginTop="3dp"
                android:paddingLeft="160dp"
                android:text="@string/INDIA"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="45sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry">

            </TextView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:contentDescription="@string/t"

                android:paddingTop="15dp"
                android:paddingEnd="140dp"
                android:paddingRight="160dp"
                android:paddingBottom="7dp"
                android:src="@drawable/flag"
                tools:ignore="RtlSymmetry" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/upper"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="75dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card1"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:cardBackgroundColor="#FF6E00"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp"
                    app:layout_constraintEnd_toStartOf="@+id/card2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/confirmed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:gravity="center_horizontal"
                            android:text="@string/confirmed"
                            android:textAlignment="center"
                            android:textColor="#000000"
                            android:textStyle="bold">

                        </TextView>

                        <TextView
                            android:id="@+id/t2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:gravity="center_horizontal"
                            android:text="@string/_50"
                            android:textAlignment="center"
                            android:textColor="#000000"
                            android:textStyle="bold">

                        </TextView>

                        <TextView
                            android:id="@+id/active_state_cases"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:gravity="center_horizontal"
                            android:text="@string/_10000"
                            android:textAlignment="center"
                            android:textColor="#000000"
                            android:textSize="22sp"
                            android:textStyle="bold">


                        </TextView>


                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card2"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:cardBackgroundColor="#0037FF"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/card1"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/active"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:gravity="center_horizontal"
                            android:text="@string/active"
                            android:textAlignment="center"
                            android:textColor="#000000"
                            android:textSize="20sp"
                            android:textStyle="bold">

                        </TextView>

                        <TextView
                            android:id="@+id/active_cases"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:gravity="center_horizontal"
                            android:text="@string/_3000"
                            android:textAlignment="center"
                            android:textColor="#000000"
                            android:textSize="22sp"
                            android:textStyle="bold">

                        </TextView>


                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@id/upper"
                android:layout_marginTop="5dp">


                <androidx.cardview.widget.CardView
                    android:id="@+id/card3"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:cardBackgroundColor="#00FF1A"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp"
                    app:layout_constraintEnd_toStartOf="@+id/card4"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/recovered"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:gravity="center_horizontal"
                            android:text="@string/recovered"
                            android:textAlignment="center"
                            android:textColor="#000000"
                            android:textStyle="bold">

                        </TextView>

                        <TextView
                            android:id="@+id/t3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:gravity="center_horizontal"
                            android:text="@string/_90"
                            android:textAlignment="center"
                            android:textColor="#000000"
                            android:textStyle="bold">

                        </TextView>

                        <TextView
                            android:id="@+id/recover_state_cases"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:gravity="center_horizontal"
                            android:text="@string/_5000"
                            android:textAlignment="center"
                            android:textColor="#000000"
                            android:textSize="22sp"
                            android:textStyle="bold">


                        </TextView>


                    </LinearLayout>


                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/card4"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:cardBackgroundColor="#FF0000"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/card3"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/death"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:gravity="center_horizontal"
                            android:text="@string/death"
                            android:textAlignment="center"
                            android:textColor="#000000"
                            android:textStyle="bold">

                        </TextView>

                        <TextView
                            android:id="@+id/t4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:gravity="center_horizontal"
                            android:text="@string/__20"
                            android:textAlignment="center"
                            android:textColor="#000000"
                            android:textStyle="bold">

                        </TextView>

                        <TextView
                            android:id="@+id/death_state_cases"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:gravity="center_horizontal"
                            android:text="@string/_500"
                            android:textAlignment="center"
                            android:textColor="#000000"
                            android:textSize="22sp"
                            android:textStyle="bold">


                        </TextView>


                    </LinearLayout>


                </androidx.cardview.widget.CardView>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/statelist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">


            </androidx.recyclerview.widget.RecyclerView>


        </LinearLayout>





</LinearLayout>

    </LinearLayout>


